--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,9 +1,100 @@
 [
   {
-    "name": "CRUD operation",
-    "url": "https://github.com/john221wick/crud-demo",
-    "image": "github.png",
-    "desc": "Basic CRUD operation using svelte as frontend, express as backend and supabase as database",
-    "tech": ["svelte", "tailwindcss", "supabase", "express"]
+    "name": "Auth.js",
+    "url": "https://authjs.dev",
+    "image": "authjs.png",
+    "desc": "Core-team member of Auth.js (NextAuth.js) - Authentication for the Web! 22k+ GitHub Stars.",
+    "tech": ["react", "nextjs", "npm"]
+  },
+  {
+    "name": "Briefkasten Docs",
+    "url": "https://docs.briefkastenhq.com",
+    "image": "briefkasten-docs.png",
+    "desc": "Marketing and documentation site for Briefkasten.",
+    "tech": ["nextjs", "tailwindcss", "react"]
+  },
+  {
+    "name": "Briefkasten",
+    "url": "https://github.com/ndom91/sveltekasten",
+    "image": "briefkasten.png",
+    "desc": "Self-hostable RSS Reader / Read-it-later application, 700+ GitHub Stars.",
+    "tech": ["svelte", "tailwindcss", "prisma", "docker"]
+  },
+  {
+    "name": "svelte-infinite",
+    "url": "https://github.com/ndom91/svelte-infinite",
+    "image": "svelteinfinite.png",
+    "desc": "Svelte 5 infinite scroller / infinite loader component.",
+    "tech": ["svelte", "typescript", "npm"]
+  },
+  {
+    "name": "NewTelco Landing",
+    "url": "https://github.com/ndom91/newtelco-tab",
+    "image": "homenewtelco.png",
+    "desc": "PWA Company launcher, includes department shortcuts, GDrive files, directory, CRM integration and more.",
+    "tech": ["nextjs", "tailwindcss", "fauna", "vercel"]
+  },
+  {
+    "name": "Checkly Homeassistant",
+    "url": "https://github.com/ndom91/homeassistant-checkly",
+    "image": "checklyhomeassistant.png",
+    "desc": "HomeAssistant custom integration for turning Checkly checks into HA sensors.",
+    "tech": ["homeassistant", "python", "checkly"]
+  },
+  {
+    "name": "react-timezone-select",
+    "url": "https://github.com/ndom91/react-timezone-select",
+    "image": "reacttimezoneselect.png",
+    "desc": "React component for selecting timezones with 190k+ downloads per month.",
+    "tech": ["react", "typescript", "npm"]
+  },
+  {
+    "name": "Corona-API",
+    "url": "https://github.com/ndom91/coronaAWS",
+    "image": "coronaapi.png",
+    "desc": "COVID-19 Data API for the German Government's #wirvsvirus hackathon. Built with AWS Serverless tech. <br /><br /><svg style='display:inline-block;margin-bottom:0.25rem;' fill='currentColor' height='14' width='14' viewBox='0 0 20 20' class='w-5 h-5'><path fill-rule='evenodd' d='M12.586 4.586a2 2 0 112.828 2.828l-3 3a2 2 0 01-2.828 0 1 1 0 00-1.414 1.414 4 4 0 005.656 0l3-3a4 4 0 00-5.656-5.656l-1.5 1.5a1 1 0 101.414 1.414l1.5-1.5zm-5 5a2 2 0 012.828 0 1 1 0 101.414-1.414 4 4 0 00-5.656 0l-3 3a4 4 0 105.656 5.656l1.5-1.5a1 1 0 10-1.414-1.414l-1.5 1.5a2 2 0 11-2.828-2.828l3-3z' clip-rule='evenodd'></path></svg><a style='margin-left: 0.2rem' href='/posts/serverless'>Read More</a>",
+    "tech": ["aws-api-gateway", "aws-lambda", "serverless", "vue-js"]
+  },
+  {
+    "name": "NewTelco 2021",
+    "url": "https://github.com/newtelco/newtelco-dato",
+    "image": "newtelcodev.png",
+    "desc": "Dark-mode homepage redesign for NewTelco GmbH (2021).",
+    "tech": ["gatsby", "tailwindcss", "framer-motion", "cloudflareworkers", "dato-cms"]
+  },
+  {
+    "name": "NewTelco 2020",
+    "url": "https://github.com/newtelco/newtelco-gatsby-netlify",
+    "image": "newtelcohome.png",
+    "desc": "Light-mode homepage redesign for NewTelco GmbH (2020).",
+    "tech": ["gatsby", "cloudflareworkers", "reactspring", "netlify"]
+  },
+  {
+    "name": "Timeoff",
+    "url": "https://github.com/newtelco/timeoff",
+    "image": "timeoff.png",
+    "desc": "Absence management application for making, approving, and auditing vacation/sick/business trip requests.",
+    "tech": ["nextjs", "nodejs", "activedirectory"]
+  },
+  {
+    "name": "Network Maintenance",
+    "url": "https://github.com/newtelco/next-maintenance",
+    "image": "maintenance.png",
+    "desc": "Internal application for receiving, creating, and auditing Network Maintenance requests from suppliers and automatically informing customers.",
+    "tech": ["nextjs", "algolia", "google", "nodejs"]
+  },
+  {
+    "name": "Youtube Playlists",
+    "url": "https://github.com/ndom91/youtube-playlists",
+    "image": "youtube.png",
+    "desc": "Side-project for creating YouTube playlists on-the-fly, shareable via state in the URL.",
+    "tech": ["react", "cloudflareworkers", "netlify"]
+  },
+  {
+    "name": "NOC Dashboard",
+    "url": "https://github.com/newtelco/nt-noc",
+    "image": "nocdashboard.png",
+    "desc": "Network Operations Center Dashboard designed to be displayed 24/7. Contains Grafana metrics and live video feeds from the datacenter.",
+    "tech": ["preact", "ffmpeg", "snowpack"]
   }
 ]
